--- a/package.json
+++ b/package.json
@@ -71,7 +71,8 @@
     "posttest": "tslint -p test -t stylish",
     "prepack": "rimraf compiled && tsc -b && oclif-dev manifest",
     "test": "mocha -r ts-node/register \"test/**/*.test.ts\"",
-    "version": "oclif-dev readme && git add README.md"
+    "version": "oclif-dev readme && git add README.md",
+    "prepare": ""
   },
   "main": "index.js",
   "directories": {
