--- a/package.json
+++ b/package.json
@@ -69,10 +69,9 @@
     "lint": "tslint --project . --config tslint.json --format stylish",
     "postpack": "rimraf oclif.manifest.json",
     "posttest": "tslint -p test -t stylish",
-    "prepack": "rimraf compiled && tsc -b && oclif-dev manifest",
+    "compile": "rimraf compiled && tsc -b && oclif-dev manifest",
     "test": "mocha -r ts-node/register \"test/**/*.test.ts\"",
-    "version": "oclif-dev readme && git add README.md",
-    "prepare": ""
+    "version": "oclif-dev readme && git add README.md"
   },
   "main": "index.js",
   "directories": {
