--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@salesforce/kit": "^1.3.3",
     "@salesforce/ts-sinon": "^1.2.3",
     "await-spawn": "^3.0.0",
+    "bent": "^7.3.12",
     "glob": "^7.1.6",
     "md5-file": "^5.0.0",
     "mocha": "^8.2.1",
