--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@ package-options.json
 **/test/source_folder
 **/test/destination_folder
 !**/test/lib/merge/package*.xml
-**/test/*.test.txt
+**/test/*.test.*
 **/delta.log
 
 force-app/
