--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
     "noUnusedLocals": true,
     "outDir": "./compiled",
     "importHelpers": true,
-    "rootDir": "./src"
+    "rootDir": "./src",
+    "composite": true
   },
   "include": [
     "./src/**/*"
