Added better logging & error handling (#5)
* Added better logging & error handling

* Update options-factory.ts

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,8 @@
     "**/.DS_Store": true
   },
   "search.exclude": {
-    "**/bin": true
+    "**/bin": true,
+    "**compiled/**/*": true
   },
   "salesforcedx-vscode-core.show-cli-success-msg": false
 }
