--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "acu-pack",
   "description": "SFDX CLI Extensions",
   "version": "2.0.0",
-  "author": "Michael Malling",
+  "author": "Salesforce Customer Success Group (CSG)",
   "bugs": {
     "url": "https://github.com/CSGAMERSServices/acu-pack/issues"
   },
