--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@salesforce/core": "^2.37.1",
     "@salesforce/kit": "^1.5.44",
     "@salesforce/ts-types": "^1.5.20",
+    "@xmldom/xmldom": "^0.8.2",
     "await-spawn": "^3.0.0",
     "bent": "^7.3.12",
     "glob": "^7.2.3",
@@ -23,7 +24,6 @@
     "tslib": "^2",
     "xlsx": "^0.17.5",
     "xml2js": "^0.4.23",
-    "xmldom": "^0.6.0",
     "xpath": "0.0.32"
   },
   "devDependencies": {
@@ -31,7 +31,7 @@
     "@oclif/plugin-help": "^3.3.1",
     "@oclif/test": "^1.2.9",
     "@salesforce/dev-config": "^2.1.3",
-    "@salesforce/dev-scripts": "^0.9.18",
+    "@salesforce/dev-scripts": "^2.0.4",
     "@salesforce/prettier-config": "^0",
     "@salesforce/ts-sinon": "^1.3.21",
     "@types/chai": "^4.3.1",
@@ -58,7 +58,7 @@
     "nyc": "^15",
     "prettier": "^2",
     "pretty-quick": "^3",
-    "rimraf": "latest",
+    "rimraf": "^3.0.2",
     "sinon": "10.0.0",
     "ts-node": "^10.9.1",
     "tslint": "^5",
