--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -21,6 +21,7 @@ jobs:
       #- run: npm ci
       #- run: npm test 
       - run: yarn install --frozen-lockfile
+      - run: yarn install sfdx-cli
       - run: yarn run compile
       - run: yarn run test
 
