--- a/.github/workflows/run-tests-on-commit.yml
+++ b/.github/workflows/run-tests-on-commit.yml
@@ -4,7 +4,9 @@
 name: Node.js Package
 
 on:
- push:
+  pull_request:
+    types: [opened, reopened]
+  push:
     branches:    
       - 'development'
       - 'main'
