--- a/.github/workflows/run-tests-on-commit.yml
+++ b/.github/workflows/run-tests-on-commit.yml
@@ -5,7 +5,7 @@ name: Node.js Package
 
 on:
   pull_request:
-    types: [opened, reopened]
+    types: [opened, reopened, synchronize]
   push:
     branches:    
       - 'development'
