Include test diff file

--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,7 @@ force-app
 **/test/destination_folder
 !**/test/lib/merge/package*.xml
 **/test/*.test.*
+!**/test/git-full-dir.test.txt
 **/delta.log
 
 
