Fixed full copy bug with Experience Cloud metadata (#20)
* Updated the way we copy entire folders

* fixed tests

* Added dedicated test for full directory copies

* Include test diff file

* Update git-full-dir.test.txt

* Fix normalized path bug

* added normalizePath util

* updated fs.rmDir

* Update git.test.ts

* Update git.test.ts

* Update git.test.ts

* Validate delta file

* Update git-full-dir.test.txt

* Update setup.ts

* Fixed hared coded EOL

* Update git.test.ts

* Update git.test.ts

* Update README.md

* more fixes

* Update delta-provider.ts

* more tries to fix tests

* Update delta-provider.ts

* another try

* Update delta-provider.ts

* Update delta-provider.ts

* Update delta-provider.ts

* Update delta-provider.ts

* another try

* try

* more

* more

* more

* more

* Fixed!!!

* revert debug

--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,8 @@ force-app
 **/test/destination_folder
 !**/test/lib/merge/package*.xml
 **/test/*.test.*
+!**/test/git-full-dir.test.txt
+test.*.*
 **/delta.log
 
 
