--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "acu-pack",
+  "name": "@salesforce/acu-pack",
   "description": "SFDX CLI Extensions",
   "version": "2.0.0",
   "author": "Salesforce Customer Success Group (CSG)",
@@ -89,7 +89,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/forcedotcom/acu-pack"
+    "url": "git+https://github.com/forcedotcom/acu-pack.git"
   },
   "scripts": {
     "lint": "eslint src/**/*.ts test/**/*.ts",
