Handle both large & small files

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "glob": "^7.2.3",
     "jsforce": "^1.11.0",
     "md5-file": "^5.0.0",
+    "mime-types": "^2.1.35",
     "tslib": "^2",
     "xlsx": "^0.17.5",
     "xml2js": "^0.4.23",
