--- a/.github/workflows/run-tests-on-commit.yml
+++ b/.github/workflows/run-tests-on-commit.yml
@@ -1,4 +1,4 @@
-# This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
+# This workflow will run tests using node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/publishing-nodejs-packages
 
 name: Node.js Package
@@ -6,19 +6,24 @@ name: Node.js Package
 on:
   pull_request:
     types: [opened, reopened, synchronize]
-  # push:
-  #   branches:    
-  #     - 'development'
-  #     - 'main'
+
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - name: Checkout Git Repository
+        uses: actions/checkout@v3
+      
+      - name: Setup Node
+        uses: actions/setup-node@v3
         with:
-          node-version: 16
-      - run: yarn install --frozen-lockfile
-      - run: yarn add sfdx-cli
-      - run: yarn run test
+          node-version: '16.x'
+          registry-url: 'https://registry.npmjs.org'
+          
+      - name: Run Tests
+        run: |
+          yarn install --frozen-lockfile
+          yarn add sfdx-cli
+          yarn run testn
+          npm publish --dry-run
 
