--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jsforce": "^1.11.0",
     "md5-file": "^5.0.0",
     "mime-types": "^2.1.35",
+    "minimatch": "^10.0.3",
     "tslib": "^2",
     "xlsx": "^0.17.5",
     "xml2js": "^0.4.23",
